--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,9 @@ DB_PORT=3306
 
 # Application source code path
 APP_SRC=../symfonyauctions-api
+
+# RabbitMQ credentials
+RABBITMQ_USER=amqpuser
+RABBITMQ_PASSWORD=amqpuser
+RABBITMQ_PORT=5672
+RABBITMQ_ADMIN_PORT=15672
