--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,5 +46,12 @@ services:
             - ${RABBITMQ_PORT:-5672}:5672
             - ${RABBITMQ_ADMINPORT:-15672}:15672
 
+    mailcatcher:
+        container_name: ${APP_NAME}.mailcatcher
+        image: schickling/mailcatcher
+        ports:
+            - ${MAIL_WEB_PORT:-1080}:1080
+            - ${MAIL_SMTP_PORT:-1025}:1025
+
 volumes: 
-  dbdata:
+    dbdata:
