--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,7 @@ RABBITMQ_USER=amqpuser
 RABBITMQ_PASSWORD=amqpuser
 RABBITMQ_PORT=5672
 RABBITMQ_ADMIN_PORT=15672
+
+# Mail
+MAIL_WEB_PORT=1080
+MAIL_SMTP_PORT=1025
