--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,9 @@ APP_NAME=symfonyauctions
 # Http port
 SERVER_PORT=80
 
+# HOST NETWORK ALIAS
+API_HOST=api.symfonyauctions.local
+
 # Database details
 DB_USER=symfonyauctionsdb
 DB_PASSWORD=123456
